UI: Header bar is overlaid #67265

Closed
opened 2019-07-19 23:25:20 +02:00 by ömer faruk öz · 8 comments

System Information
Operating system: Windows 10 home single language
Graphics card: intel core i3

Blender version
2.80 rc2.

Short description of error
half image under the screen
bug.PNG

Exact steps to reproduce the issue

  • Open blender
  • Make the window quite small as in the screenshot
  • Go to the Animation workspace
**System Information** Operating system: Windows 10 home single language Graphics card: intel core i3 **Blender version** 2.80 rc2. **Short description of error** half image under the screen ![bug.PNG](https://archive.blender.org/developer/F7618847/bug.PNG) **Exact steps to reproduce the issue** - Open blender - Make the window quite small as in the screenshot - Go to the Animation workspace

Added subscriber: @omer09

Added subscriber: @omer09

Added subscriber: @dark999

Added subscriber: @dark999

please follow this report-bug form https://developer.blender.org/maniphest/task/edit/form/1/ to update this report
your blender version is outdated, download Blender RC2 from here https://www.blender.org/download/ or last daily-build at the bottom page of previous link, can you confirm the presence of this issue?
to avoid issue with old bugged Intel drivers, can you upgrade your GPU drivers from Intel site at latest avaible?

please follow this report-bug form https://developer.blender.org/maniphest/task/edit/form/1/ to update this report your blender version is outdated, download Blender RC2 from here https://www.blender.org/download/ or last daily-build at the bottom page of previous link, can you confirm the presence of this issue? to avoid issue with old bugged Intel drivers, can you upgrade your GPU drivers from Intel site at latest avaible?

Added subscriber: @brecht

Added subscriber: @brecht

The version 2.80 rc2 is indeed the report, just some info from template was left in.

The version 2.80 rc2 is indeed the report, just some info from template was left in.

I can reproduce the issue. Just make the window quite small as in the screenshot, then go to the Animation workspace.

I can reproduce the issue. Just make the window quite small as in the screenshot, then go to the Animation workspace.
Germano Cavalcante changed title from half image under the screen to UI: Header bar is overlaid 2020-02-05 14:31:58 +01:00

This issue was referenced by 69377784f5

This issue was referenced by 69377784f5af5bc37ece4fb1d32b1b1fb9be326a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-09-05 18:17:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67265
No description provided.